fixed textarea not aligning left in form removed extra spaces between tags

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -944,15 +944,6 @@ p.contentbox {
     word-spacing: 0.25rem;
 }
 
-.textarea {
-padding-top: 2px;
-flex-direction: row;
-resize: auto;
-cursor: auto;
-white-space: break-spaces;
-word-wrap: break-word;
-}
-
 
 // hiding the small device responsive sections
 
@@ -1476,7 +1467,7 @@ footer a:hover {
         font-size: 0.75rem;
     } 
 
-    input, .textarea {
+    input, textarea {
         margin: 5px;
         font-family: inherit;
         font-size: 0.75rem;
@@ -2136,7 +2127,7 @@ footer a:hover {
         padding: 10px 0;
     }
 
-    .textarea {
+    textarea {
         margin: 0;
         font-family: inherit;
         font-size: inherit;
